WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68346
[GTK] Fix distcheck build
https://bugs.webkit.org/show_bug.cgi?id=68346
Summary
[GTK] Fix distcheck build
Carlos Garcia Campos
Reported
2011-09-19 03:21:23 PDT
make distcheck doesn't currently work.
Attachments
Patch
(4.96 KB, patch)
2011-09-19 03:24 PDT
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2011-09-19 03:24:57 PDT
Created
attachment 107826
[details]
Patch
Philippe Normand
Comment 2
2011-09-19 04:14:47 PDT
Comment on
attachment 107826
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=107826&action=review
Looks good overall, just a doubt of the mime-type handling test.
> Source/WebKit/gtk/tests/testmimehandling.c:-79 > - } else if (g_str_equal(path, "/ogg")) {
Hum, why remove this part of the test? If it fails we'd better fix it.
Carlos Garcia Campos
Comment 3
2011-09-19 04:22:25 PDT
(In reply to
comment #2
)
> (From update of
attachment 107826
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=107826&action=review
> > Looks good overall, just a doubt of the mime-type handling test. > > > Source/WebKit/gtk/tests/testmimehandling.c:-79 > > - } else if (g_str_equal(path, "/ogg")) { > > Hum, why remove this part of the test? If it fails we'd better fix it.
Soup behaviour has changed, the "fix" would depend on soup version, so we should bump the soup requirements to make sure the test won't fail. See:
https://bugzilla.gnome.org/show_bug.cgi?id=648846#c8
So, for now we have decided to remove that part of the test.
Philippe Normand
Comment 4
2011-09-19 04:34:27 PDT
Oh, OK then :) I've missed that link you also mentionned in the ChangeLog, sorry.
WebKit Review Bot
Comment 5
2011-09-19 09:21:07 PDT
Comment on
attachment 107826
[details]
Patch Clearing flags on attachment: 107826 Committed
r95417
: <
http://trac.webkit.org/changeset/95417
>
WebKit Review Bot
Comment 6
2011-09-19 09:21:11 PDT
All reviewed patches have been landed. Closing bug.
Martin Robinson
Comment 7
2011-09-19 10:09:01 PDT
In the future, I think it would be better to update the source lists and fix the tests in two separate patches. That would allow an automatic rollout when the soup version is updated. Source list updates do not need review either, so it isn't much harder.
Carlos Garcia Campos
Comment 8
2011-09-19 23:39:23 PDT
(In reply to
comment #7
)
> In the future, I think it would be better to update the source lists and fix the tests in two separate patches. That would allow an automatic rollout when the soup version is updated. Source list updates do not need review either, so it isn't much harder.
Ok, sorry, in this case just updating libsoup wound't work, we need to rethink the test itself, but still, you are right.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug