[GTK] Fix distcheck build https://bugs.webkit.org/show_bug.cgi?id=68346

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2011-09-19
Reviewed by Philippe Normand.

Source/JavaScriptCore:

* GNUmakefile.list.am:

Source/WebKit/gtk:

* tests/testmimehandling.c: Remove ogg tests, since the behavious
has changed in libsoup (https://bugzilla.gnome.org/show_bug.cgi?id=648846#c8)
(server_callback):
(mime_type_policy_decision_requested_cb):
(main):
* webkit/webkitwebplugin.cpp: Fix introspection annotation.

Canonical link: https://commits.webkit.org/84286@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95417 268f45cc-cd09-0410-ab3c-d52691b4dbfc